--- a/src/app/usit/components/openreqs/openreqs.component.html
+++ b/src/app/usit/components/openreqs/openreqs.component.html
@@ -7,6 +7,25 @@
         <span class="header-text">
             Dice Requirements
         </span>
+        <div>
+            <mat-form-field class="portal-form-field">
+                <mat-label>Select a Portal</mat-label>
+                <mat-select (selectionChange)="onSelectionChange($event)">
+                    <mat-option value="all">All</mat-option>
+                    <mat-option value="adzuna">Adzuna</mat-option>
+                    <mat-option value="dice">Dice</mat-option>
+                    <mat-option value="indeed">Indeed</mat-option>
+                    <mat-option value="jobcube">Job Cube</mat-option>
+                    <mat-option value="joblift">Job Lift</mat-option>
+                    <mat-option value="juju">Juju</mat-option>
+                    <mat-option value="linkedin">LinkedIn</mat-option>
+                    <mat-option value="post job free">Post Job Free</mat-option>
+                    <mat-option value="recruit.net">Recruit</mat-option>
+                    <mat-option value="Simplyhired">Simply Hired</mat-option>
+                    <mat-option value="snaprecruit">Snaprecruit</mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
         <div class="hot-list-actions">
             <div class="search-hot-list">
                 <input matInput type="text" class="search" placeholder="search " (keyup)="applyFilter($event)">
@@ -33,6 +52,13 @@
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Name" style="width: 7%">Posted On</th>
                     <td mat-cell *matCellDef="let element" nowrap style="width: 7%"> {{element?.posted_on | date:'MM-dd-yyyy'}} </td>
                 </ng-container>
+
+                <!-- Source Column-->
+                <ng-container matColumnDef="source">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Source" style="width: 7%">Source</th>
+                    <td mat-cell *matCellDef="let element" nowrap style="width: 7%"> {{ element?.source }} </td>
+                </ng-container>
+
                 <!-- Technology Column-->
                 <ng-container matColumnDef="job_title">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Technology" style="width: 15%">
