--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,7 @@
 <section id="footer">
-  <span>Narvee Tech Pvt ltd - </span>
-  <a >Terms & Conditions 2023</a>
+  <!-- <span>Narvee Tech Pvt ltd - </span>
+  <a >Terms & Conditions 2023</a> -->
+
+  <span>©2024 Singular Analysts Inc.</span>
 
 </section>
