forgot-password changes

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -31,7 +31,7 @@
               </mat-form-field>
 
               <div class="forgot-password">
-                  <a routerLink="/change-password">Forgot Password?</a>
+                  <a routerLink="/forgot-password">Forgot Password?</a>
               </div>
 
               <button mat-raised-button color="primary" class="login-button">Login</button>
