password change changes

--- a/src/app/components/password-change/password-change.component.html
+++ b/src/app/components/password-change/password-change.component.html
@@ -26,48 +26,52 @@
                 <div class="row mb-3">
                   <div class="col-md-8 col-lg-9">
                     <mat-form-field appearance="fill" style="width:40rem ;margin-left:2rem">
-                      <mat-label> current Password</mat-label>
-                      <input matInput
-                             [ngClass]="{ 'is-invalid': submitted && f.password.errors}"
-                             required
-                             formControlName="password"
-                             type="password">
-                      <mat-error *ngIf="f.password.hasError('required') && (submitted || f.password.touched)">Please enter your current password</mat-error>
+                      <mat-label> Current Password</mat-label>
+                      <input matInput [ngClass]="{ 'is-invalid': submitted && f.password.errors}" required
+                        formControlName="password" type="password">
+                      <mat-error *ngIf="f.password.hasError('required') && (submitted || f.password.touched)">Please
+                        enter your current password</mat-error>
                     </mat-form-field>
                   </div>
                 </div>
                 <br />
                 <div class="row mb-3">
-                  <label for="newPassword" class="col-md-4 col-lg-3 col-form-label" style="margin-left:2rem">New Password</label>
                   <div class="col-md-8 col-lg-9">
-                      <mat-form-field appearance="fill" style="width:40rem; margin-left:2rem;">
-                          <mat-label>New Password</mat-label>
-                          <input matInput name="newPassword" formControlName="newPassword" type="password" [(ngModel)]="newpassword">
-                          <mat-error *ngIf="(submitted || f.password.touched) &&f.newPassword.errors && f.newPassword.errors.required && !newpassword">Please enter your new password</mat-error>
-                          <mat-error *ngIf="f.newPassword.errors?.pattern">
-                              Password should be between 8 - 15 characters long and should contain one number, one upper and lower case character, and one special character.
-                          </mat-error>
-                      </mat-form-field>
-                  </div>
-              </div>
-              <br>
-              <div class="row mb-3">
-                <label for="renewpassword" class="col-md-4 col-lg-3 col-form-label" style="margin-left:2rem">Confirm Password</label>
-                <div class="col-md-8 col-lg-9">
-                    <mat-form-field appearance="fill" style="width:40rem ;margin-left:2rem">
-                        <mat-label>Confirm Password</mat-label>
-                        <input matInput name="renewpassword" formControlName="renewpassword" type="password"[(ngModel)]="confirmpassword">
-                        <mat-error *ngIf="(submitted || f.password.touched)  && f.newPassword.errors && f.renewpassword.errors.required && !confirmpassword">Please re-enter your new password</mat-error>
-                        <mat-error *ngIf="f.renewpassword.errors?.pattern">
-                            Password should be between 8 - 15 characters long and should contain one number, one upper and lower case character, and one special character.
-                        </mat-error>
+                    <mat-form-field appearance="fill" style="width:40rem; margin-left:2rem;">
+                      <mat-label>New Password</mat-label>
+                      <input matInput name="newPassword" formControlName="newPassword" type="password"
+                        [(ngModel)]="newpassword">
+                      <mat-error
+                        *ngIf="(submitted || f.password.touched) &&f.newPassword.errors && f.newPassword.errors.required && !newpassword">Please
+                        enter your new password</mat-error>
+                      <mat-error *ngIf="f.newPassword.errors?.pattern">
+                        Password should be between 8 - 15 characters long and should contain one number, one upper and
+                        lower case character, and one special character.
+                      </mat-error>
                     </mat-form-field>
+                  </div>
                 </div>
-            </div>
-            
+                <br>
+                <div class="row mb-3">
+                  <div class="col-md-8 col-lg-9">
+                    <mat-form-field appearance="fill" style="width:40rem ;margin-left:2rem">
+                      <mat-label>Confirm Password</mat-label>
+                      <input matInput name="renewpassword" formControlName="renewpassword" type="password"
+                        [(ngModel)]="confirmpassword">
+                      <mat-error
+                        *ngIf="(submitted || f.password.touched)  && f.newPassword.errors && f.renewpassword.errors.required && !confirmpassword">Please
+                        re-enter your new password</mat-error>
+                      <mat-error *ngIf="f.renewpassword.errors?.pattern">
+                        Password should be between 8 - 15 characters long and should contain one number, one upper and
+                        lower case character, and one special character.
+                      </mat-error>
+                    </mat-form-field>
+                  </div>
+                </div>
+
                 <div class="text-center">
-                  <button type="submit" mat-raised-button color="primary" 
-                          style="margin-left:14rem;margin-top:4rem;" >Change Password</button>
+                  <button type="submit" mat-raised-button color="primary"
+                    style="margin-left:14rem;margin-top:4rem;">Change Password</button>
                 </div>
               </form>
             </div>
