--- a/src/app/components/password-change/password-change.component.scss
+++ b/src/app/components/password-change/password-change.component.scss
@@ -1,12 +1,12 @@
 /* userprofile.component.css */
 .main {
   padding: 20px;
- background-color: #d4cece;
-padding: 20px;
- 
- padding-bottom: 128rem;
-// margin-left: 164px;
- width: 120rem;
+  background-color: #d4cece;
+  padding: 20px;
+
+  padding-bottom: 128rem;
+  // margin-left: 164px;
+  width: 100%;
 
 }
 
@@ -16,68 +16,69 @@ padding: 20px;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
-color: rgb(53, 51, 51);
+  color: rgb(53, 51, 51);
 }
-
-
 
 .section {
   margin-top: 20px;
   background-color: white;
-  width:44rem;
-  
+  width: 44rem;
+  height: 31rem;
 }
+
 .mat-error {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   text-align: center;
- color: rgb(211, 33, 33);
+  color: rgb(211, 33, 33);
 
-.profile-card {
-  text-align: center;
-}
+  .profile-card {
+    text-align: center;
+  }
 
-.profile-card img {
-  width: 150px;
+  .profile-card img {
+    width: 150px;
 
-  object-fit: cover;
-  border-radius: 50%;
-}
+    object-fit: cover;
+    border-radius: 50%;
+  }
 
-.profile-card h2 {
-  margin-top: 10px;
-}
+  .profile-card h2 {
+    margin-top: 10px;
+  }
 
-.profile-card h3 {
-  margin-bottom: 20px;
-}
-
-
-.tab-pane {
-  padding: 20px;
-}
-
-.invalid-feedback {
-  color: #dc3545;
-}
+  .profile-card h3 {
+    margin-bottom: 20px;
+  }
 
 
+  .tab-pane {
+    padding: 20px;
+  }
 
-.card {
-  margin-top: 20px; 
-  
-  width:35rem;
-  align-items: center;
+  .invalid-feedback {
+    color: #dc3545;
+  }
 
-}
 
-.h6{
-  display: flex;
-}
-.success, .fail {
-  font-size: 16px;
-}
+
+  .card {
+    margin-top: 20px;
+
+    width: 35rem;
+    align-items: center;
+
+  }
+
+  .h6 {
+    display: flex;
+  }
+
+  .success,
+  .fail {
+    font-size: 16px;
+  }
 
 }
