--- a/src/app/usit/components/dashboard/dashboard.component.html
+++ b/src/app/usit/components/dashboard/dashboard.component.html
@@ -461,6 +461,98 @@
     </div>
   </div>
 
+  <div class="analysis-container">
+    <div class="analysis-left-div">
+      <div class="table-container table-wrapper">
+        <div class="header-container-leading-resources">
+          <span class="header-text">Category Analysis</span>
+        </div>
+        <hr>
+        <section class="table-style mat-elevation-z8">
+          <table mat-table [dataSource]="dataSourceTech" class="responsive-table">
+
+            <ng-container matColumnDef="SNo">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by SNo"> S.No </th>
+              <td mat-cell *matCellDef="let element">{{ element.serialNum }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="Date">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Date"> Posted On </th>
+              <td mat-cell *matCellDef="let element" nowrap> {{element?.posted_on}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="Category">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Category"> Category
+              </th>
+              <td mat-cell *matCellDef="let element"> {{element.category_skill}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="VendorCount">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by VendorCount"> Vendor Count
+              </th>
+              <td mat-cell *matCellDef="let element">
+                 <p class="count" (click)="vendorCategoryPopup(element.category_skill,element.posted_on, 'vendor')">
+                  {{element.vendorcount}}
+                </p> 
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="dataTableColumnsTechAnalysis; sticky: true"></tr>
+            <tr mat-row *matRowDef="let row; columns: dataTableColumnsTechAnalysis;"></tr>
+          </table>
+          <hr>
+          <p class="no-data-found" *ngIf="!dataSource.filteredData.length">{{'No matching data found'}}</p>
+        </section>
+      </div>
+    </div>
+    <div class="analysis-right-div">
+      <div class="table-container table-wrapper">
+        <div class="header-container-leading-resources">
+          <span class="header-text">Vendor Analysis</span>
+        </div>
+        <hr>
+        <section class="table-style mat-elevation-z8">
+          <table mat-table [dataSource]="dataSourceVendor" class="responsive-table">
+
+            <ng-container matColumnDef="SNo">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by SNo"> S.No </th>
+              <td mat-cell *matCellDef="let element">
+                {{ element.serialNum }}
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="Date">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Date"> Posted On
+              </th>
+              <td mat-cell *matCellDef="let element" nowrap> {{element?.posted_on}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="Vendor">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Vendor"> Vendor
+              </th>
+              <td mat-cell *matCellDef="let element"> {{element.vendor}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="CategoryCount">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by CategoryCount"> Category Count
+              </th>
+              <td mat-cell *matCellDef="let element">
+                <p class="count" (click)="vendorCategoryPopup(element.vendor, element.posted_on, 'category')">
+                  {{element.category_count}} 
+                </p> 
+              </td>
+            </ng-container>
+            
+            <tr mat-header-row *matHeaderRowDef="dataTableColumnsVendorAnalysis; sticky: true"></tr>
+            <tr mat-row *matRowDef="let row; columns: dataTableColumnsVendorAnalysis;"></tr>
+          </table>
+          <hr>
+          <p class="no-data-found" *ngIf="!dataSource.filteredData.length">{{'No matching data found'}}</p>
+        </section>
+      </div>
+    </div>
+  </div>
+
   <div class="table-container-dice table-wrapper" style="margin-bottom: 120px;" *ngIf="sourcingLead">
     <div class="header-container-leading-resources">
       <span class="header-text">Dice Requirement Tags</span>
