--- a/src/app/usit/components/linkedprofiles/linkedprofiles.component.html
+++ b/src/app/usit/components/linkedprofiles/linkedprofiles.component.html
@@ -23,14 +23,14 @@
 
                 <!-- SNo Column -->
                 <ng-container matColumnDef="SerialNum">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number">
+                    <th mat-header-cell *matHeaderCellDef>
                         S.No </th>
                     <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
                 </ng-container>
 
                 <!-- Name Column-->
                 <ng-container matColumnDef="candidate_name">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Name">Candidate Name
+                    <th mat-header-cell *matHeaderCellDef>Candidate Name
                     </th>
                     <td mat-cell *matCellDef="let element">
                         
@@ -42,7 +42,7 @@
                 </ng-container>
                 <!-- Technology Column-->
                 <ng-container matColumnDef="address">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Technology">
+                    <th mat-header-cell *matHeaderCellDef>
                         Address </th>
                     <td mat-cell *matCellDef="let element">
                         {{element?.address}}
@@ -51,14 +51,14 @@
 
                 <!-- Visa Column-->
                 <ng-container matColumnDef="category">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Visa">
+                    <th mat-header-cell *matHeaderCellDef>
                         Category </th>
                     <td mat-cell *matCellDef="let element">
                         {{element?.category}} </td>
                 </ng-container>
                 <!-- Experience Column-->
                 <ng-container matColumnDef="profile_url">
-                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Experience"> LinkedIn Url </th>
+                    <th mat-header-cell *matHeaderCellDef > LinkedIn Url </th>
                     <td mat-cell *matCellDef="let element">
                         <span class="consultant-name">
                             <a class="profile" (click)="lockProfile(element.id)">Lock
@@ -67,6 +67,12 @@
 
                     </td>
                 </ng-container>
+
+                <ng-container matColumnDef="job_title">
+                    <th mat-header-cell *matHeaderCellDef style="width:40%"> Status </th>
+                    <td mat-cell *matCellDef="let element" matTooltip="{{element?.job_title}}" matTooltipPosition="below" style="width:40%; overflow: hidden; text-overflow: ellipsis;"> {{element?.job_title}} </td>
+                </ng-container>
+
                 <!-- table ROW -->
                 <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
                 <tr mat-row *matRowDef="let row; columns: dataTableColumns;"></tr>
