--- a/src/app/usit/components/employee-list/employee-list.component.html
+++ b/src/app/usit/components/employee-list/employee-list.component.html
@@ -9,8 +9,9 @@
       Employees
     </span>
     <div class="emp-actions">
-      <button [disabled]="!privilegeServ.hasPrivilege('ADD_EMPLOYEE')" mat-icon-button disableRipple class="add-user" (click)="addEmployee()" matTooltip="Add Employee" matTooltipPosition="left">
-        <mat-icon  [ngClass]="{'item-icon': privilegeServ.hasPrivilege('ADD_EMPLOYEE')}">add_circle</mat-icon>
+      <button [disabled]="!privilegeServ.hasPrivilege('ADD_EMPLOYEE')" mat-icon-button disableRipple class="add-user"
+        (click)="addEmployee()" matTooltip="Add Employee" matTooltipPosition="left">
+        <mat-icon [ngClass]="{'item-icon': privilegeServ.hasPrivilege('ADD_EMPLOYEE')}">add_circle</mat-icon>
       </button>
 
       <div class="search-employee">
@@ -29,21 +30,27 @@
 
         <!-- serial Number Column mat-sort-header  -->
         <ng-container matColumnDef="SerialNum">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number"> S.No </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number"> S.No
+          </th>
           <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
         </ng-container>
 
         <!-- Name Column -->
         <ng-container matColumnDef="Name">
-          <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Name"> Name </th>
+          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Name"> Name </th>
           <td mat-cell *matCellDef="let element">
             <span class="user-info" (click)="goToUserInfo(element.userid)">
               {{element.fullname}}
             </span>
             <ng-container *ngIf="element.locked; then updateStatTemplate else elseTemplate"></ng-container>
             <ng-template #updateStatTemplate>
-              <span [style.cursor]="'pointer'" (click)="onStatusUpdate(element)">{{element.pseudoname}}
+              <span [style.cursor]="'pointer'" style="display: flex; flex-direction: row; align-items: center; gap: 2px;" >{{element.pseudoname}}
+                <button [disabled]="!privilegeServ.hasPrivilege('STATUS_EMPLOYEE')" mat-raised-button (click)="unlock(element)"
+                  style="width: 65px; height: 15px;font-weight: bolder;background-color: orange;" [ngStyle]="{ color: 'white' }" >
+                 <span style="font-weight: bolder;">LOCKED</span> 
+                </button>
               </span>
+              <!--(click)="onStatusUpdate(emp)"-->
             </ng-template>
             <ng-template #elseTemplate>
               {{element.pseudoname}}
@@ -54,26 +61,24 @@
 
         <!-- Email Column -->
         <ng-container matColumnDef="Email">
-          <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Email"> Email </th>
+          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Email"> Email </th>
           <td mat-cell *matCellDef="let element"> {{element.email}} </td>
         </ng-container>
 
         <!-- Personal/Comp Number Column -->
         <ng-container matColumnDef="PersonalOrCompanyNumber">
-          <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Personal/Comp Number">
+          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Personal/Comp Number">
             Personal/Comp Number </th>
           <td mat-cell *matCellDef="let element">
-            <span
-              *ngIf="element.personalcontactnumber != null">{{element.personalcontactnumber}}</span>
+            <span *ngIf="element.personalcontactnumber != null">{{element.personalcontactnumber}}</span>
             <br>
-            <span
-              *ngIf="element.companycontactnumber != null">{{element.companycontactnumber}}</span>
+            <span *ngIf="element.companycontactnumber != null">{{element.companycontactnumber}}</span>
           </td>
         </ng-container>
 
         <!-- Designation Column -->
         <ng-container matColumnDef="Designation">
-          <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Designation"> Designation
+          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Designation"> Designation
           </th>
           <td mat-cell *matCellDef="let element"> {{element.designation}} </td>
         </ng-container>
@@ -94,7 +99,8 @@
           <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Status"> Status </th>
           <td mat-cell *matCellDef="let emp">
             <span>
-              <button [disabled]="!privilegeServ.hasPrivilege('STATUS_EMPLOYEE')" mat-raised-button (click)="onStatusUpdate(emp)" style="width: 60px; height: 25px;" [ngStyle]="{ color: 'white' }"
+              <button [disabled]="!privilegeServ.hasPrivilege('STATUS_EMPLOYEE')" mat-raised-button
+                (click)="onStatusUpdate(emp)" style="width: 60px; height: 25px;" [ngStyle]="{ color: 'white' }"
                 [ngClass]="emp.status === 'Active' ? 'mat-primary' : 'mat-warn'">
                 {{ emp.status }}
               </button>
@@ -107,12 +113,14 @@
           <th mat-header-cell *matHeaderCellDef> Action </th>
           <td mat-cell *matCellDef="let emp" class="action-buttons">
             <span class="action-btns">
-            <button [disabled]="!privilegeServ.hasPrivilege('EDIT_EMPLOYEE')" mat-icon-button (click)="editEmployee(emp)" class="action-button-ed">
-              <mat-icon>edit</mat-icon>
-            </button>
-            <button [disabled]="!privilegeServ.hasPrivilege('DELETE_EMPLOYEE')" mat-icon-button (click)="deleteEmployee(emp)" class="action-button-ed">
-              <mat-icon [ngClass]="{'delete-icon': privilegeServ.hasPrivilege('DELETE_EMPLOYEE')}">delete</mat-icon>
-            </button>
+              <button [disabled]="!privilegeServ.hasPrivilege('EDIT_EMPLOYEE')" mat-icon-button
+                (click)="editEmployee(emp)" class="action-button-ed">
+                <mat-icon>edit</mat-icon>
+              </button>
+              <button [disabled]="!privilegeServ.hasPrivilege('DELETE_EMPLOYEE')" mat-icon-button
+                (click)="deleteEmployee(emp)" class="action-button-ed">
+                <mat-icon [ngClass]="{'delete-icon': privilegeServ.hasPrivilege('DELETE_EMPLOYEE')}">delete</mat-icon>
+              </button>
             </span>
           </td>
         </ng-container>
