--- a/src/app/usit/components/openreqs/openreqs.component.html
+++ b/src/app/usit/components/openreqs/openreqs.component.html
@@ -49,21 +49,22 @@
 
                 <!-- Name Column-->
                 <ng-container matColumnDef="posted_on">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Name" style="width: 7%">Posted On</th>
-                    <td mat-cell *matCellDef="let element" nowrap style="width: 7%"> {{element?.posted_on | date:'MM-dd-yyyy'}} </td>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Name"
+                        style="width: 7%">Posted On</th>
+                    <td mat-cell *matCellDef="let element" nowrap style="width: 7%"> {{element?.posted_on |
+                        date:'MM-dd-yyyy'}} </td>
                 </ng-container>
 
-                <!-- Source Column-->
-                <ng-container matColumnDef="source">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Source" style="width: 7%">Source</th>
-                    <td mat-cell *matCellDef="let element" nowrap style="width: 7%"> {{ element?.source }} </td>
-                </ng-container>
+
 
                 <!-- Technology Column-->
                 <ng-container matColumnDef="job_title">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Technology" style="width: 15%">
-                        Title  </th>
-                    <td mat-cell *matCellDef="let element" style="width: 20%"><span class="consultant-name"><a href="{{element?.job_source}}" target="_blank" (click)="empTag(element.id)">{{element?.job_title}}</a>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Technology"
+                        style="width: 15%">
+                        Title </th>
+                    <td mat-cell *matCellDef="let element" style="width: 20%"><span class="consultant-name"><a
+                                href="{{element?.job_source}}" target="_blank"
+                                (click)="empTag(element.id)">{{element?.job_title}}</a>
                         </span> </td>
                 </ng-container>
 
@@ -89,22 +90,29 @@
                 <!-- Rate Column-->
                 <ng-container matColumnDef="vendor">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Rate">
-                         Vendor</th>
+                        Vendor</th>
                     <td mat-cell *matCellDef="let element"> {{element?.vendor}}
                     </td>
                 </ng-container>
 
+                <!-- Source Column-->
+                <ng-container matColumnDef="source">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Source"
+                        style="width: 7%">Source</th>
+                    <td mat-cell *matCellDef="let element" nowrap style="width: 7%"> {{ element?.source }} </td>
+                </ng-container>
+
                 <!-- Priority Column-->
-                <ng-container matColumnDef="end_client">
+                <!-- <ng-container matColumnDef="end_client">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Priority">
                          Client</th>
                     <td mat-cell *matCellDef="let element"> {{element?.end_client}}
                     </td>
-                </ng-container>
+                </ng-container> -->
 
                 <!-- table ROW -->
                 <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
-                <tr mat-row *matRowDef="let row; columns: dataTableColumns;" [ngStyle]="getRowStyles(row)"  ></tr>
+                <tr mat-row *matRowDef="let row; columns: dataTableColumns;" [ngStyle]="getRowStyles(row)"></tr>
             </table>
             <p class="no-data-found" *ngIf="!dataSource.data.length">{{'No matching data found'}}</p>
         </section>
